@@ -1,143 +1,143 @@
-(TeX-add-style-hook "rpcManual"
+(TeX-add-style-hook
+ "rpcManual"
  (lambda ()
-    (LaTeX-add-bibitems
-     "Ross:1992tz"
-     "Barger:1994gh"
-     "Pierce:1997zz"
-     "Djouadi:1998di"
-     "Baer:1999sp"
-     "Allanach:2000ii"
-     "Corcella:2000bw"
-     "Allanach:2008zn"
-     "comparison"
-     "Gabbiani:1996hi"
-     "Gorishnii:1990zu"
-     "Tarasov:1980au"
-     "Gorishnii:1984zi"
-     "Chetyrkin:1997sg"
-     "avdeev"
-     "bednyakov"
-     "Groom:2000in"
-     "Casas:1998vh"
-     "Martin:2001vx"
-     "Yamada:2001ck"
-     "Dedes:2002dy"
-     "Katsikatsou:2000cd"
-     "Degrassi:2001yf"
-     "Brignole:2001jy"
-     "Brignole:2002bz"
-     "Dedes:2003km"
-     "Barbieri:1998uv"
-     "deCarlos:1993yy"
-     "lhacc"
-     "scaledep"
-     "mandv"
-     "bottomMass"
-     "bench"
-     "bench2"
-     "sdecay"
-     "pythia"
-     "micromegas"
-     "Randall:1998uk"
-     "gmsb"
-     "lhacc2")
-    (LaTeX-add-labels
-     "sec:notation"
-     "susypars"
-     "fields"
-     "superpot"
-     "yuksaway"
-     "sec:susybreak"
-     "tab:conv"
-     "sec:tree"
-     "mchi0"
-     "mchi"
-     "sqmu"
-     "sqmd"
-     "sqme"
-     "rotateh"
-     "sec:calculation"
-     "fig:algorithm"
-     "ckmPar"
-     "ckm"
-     "msusy"
-     "mucond"
-     "Bcond"
-     "mguteq"
-     "glumass"
-     "sec:finetune"
-     "FT100index"
-     "sec:run"
-     "tab:mssm-cmd-line-options"
-     "tab:general-cmd-line-options"
-     "sec:input"
-     "sec:prog"
-     "bcs"
-     "sec:output"
-     "sec:prob"
-     "higgsufb"
-     "sec:switches"
-     "tab:switches"
-     "sec:objects"
-     "fig:objstruc"
-     "tab:rge"
-     "tab:approx"
-     "tab:qedqcd"
-     "scaley"
-     "sec:mssmsusy"
-     "tab:mssmsusy"
-     "sec:softie"
-     "tab:softparsmssm"
-     "sec:mssmsoftsusy"
-     "tab:sphys"
-     "tab:drbarpars"
-     "table:probs"
-     "tab:mssmsoftdata"
-     "tab:softmeth"
-     "tab:altewsb"
-     "altEwsbEqs"
-     "sec:flavour"
-     "tab:flavsoft"
-     "tab:flavphys")
-    (TeX-add-symbols
-     '("href" 2)
-     "at"
-     "ab"
-     "as"
-     "atau"
-     "oat"
-     "oab"
-     "oatau"
-     "oatab"
-     "oatas"
-     "oabas"
-     "oatababq"
-     "oatqatababq"
-     "oatasatq"
-     "oatasabas"
-     "oatasabasatq"
-     "oatq"
-     "oabq"
-     "oatauq"
-     "oabatau"
-     "oas"
-     "oatauqatab"
-     "SOFTSUSY"
-     "SUSPECT"
-     "HERWIG"
-     "ISAJET"
-     "SSARD"
-     "ISAWIG"
-     "MICROMEGAS"
-     "code"
-     "gev"
-     "half"
-     "hepph")
-    (TeX-run-style-hooks
-     "jheppub"
-     "axodraw"
-     "latex2e"
-     "art10"
-     "article"
-     "")))
+   (TeX-run-style-hooks
+    "latex2e"
+    "article"
+    "art10"
+    "axodraw"
+    "jheppub")
+   (TeX-add-symbols
+    '("href" 2)
+    "at"
+    "ab"
+    "as"
+    "atau"
+    "oat"
+    "oab"
+    "oatau"
+    "oatab"
+    "oatas"
+    "oabas"
+    "oatababq"
+    "oatqatababq"
+    "oatasatq"
+    "oatasabas"
+    "oatasabasatq"
+    "oatq"
+    "oabq"
+    "oatauq"
+    "oabatau"
+    "oas"
+    "oatauqatab"
+    "SOFTSUSY"
+    "SUSPECT"
+    "HERWIG"
+    "ISAJET"
+    "SSARD"
+    "ISAWIG"
+    "MICROMEGAS"
+    "code"
+    "gev"
+    "half"
+    "hepph")
+   (LaTeX-add-labels
+    "sec:notation"
+    "susypars"
+    "fields"
+    "superpot"
+    "yuksaway"
+    "sec:susybreak"
+    "tab:conv"
+    "sec:tree"
+    "mchi0"
+    "mchi"
+    "sqmu"
+    "sqmd"
+    "sqme"
+    "rotateh"
+    "sec:calculation"
+    "fig:algorithm"
+    "ckmPar"
+    "ckm"
+    "msusy"
+    "mucond"
+    "Bcond"
+    "mguteq"
+    "glumass"
+    "sec:finetune"
+    "FT100index"
+    "sec:run"
+    "tab:mssm-cmd-line-options"
+    "tab:general-cmd-line-options"
+    "sec:input"
+    "sec:prog"
+    "bcs"
+    "sec:output"
+    "sec:prob"
+    "higgsufb"
+    "sec:switches"
+    "tab:switches"
+    "sec:objects"
+    "fig:objstruc"
+    "tab:rge"
+    "tab:approx"
+    "tab:qedqcd"
+    "scaley"
+    "sec:mssmsusy"
+    "tab:mssmsusy"
+    "sec:softie"
+    "tab:softparsmssm"
+    "sec:mssmsoftsusy"
+    "tab:sphys"
+    "tab:drbarpars"
+    "table:probs"
+    "tab:mssmsoftdata"
+    "tab:softmeth"
+    "tab:altewsb"
+    "altEwsbEqs"
+    "sec:flavour"
+    "tab:flavsoft"
+    "tab:flavphys")
+   (LaTeX-add-bibitems
+    "Ross:1992tz"
+    "Barger:1994gh"
+    "Pierce:1997zz"
+    "Djouadi:1998di"
+    "Baer:1999sp"
+    "Allanach:2000ii"
+    "Corcella:2000bw"
+    "Allanach:2008zn"
+    "comparison"
+    "Gabbiani:1996hi"
+    "Gorishnii:1990zu"
+    "Tarasov:1980au"
+    "Gorishnii:1984zi"
+    "Chetyrkin:1997sg"
+    "avdeev"
+    "bednyakov"
+    "Groom:2000in"
+    "Casas:1998vh"
+    "Martin:2001vx"
+    "Yamada:2001ck"
+    "Dedes:2002dy"
+    "Katsikatsou:2000cd"
+    "Degrassi:2001yf"
+    "Brignole:2001jy"
+    "Brignole:2002bz"
+    "Dedes:2003km"
+    "Barbieri:1998uv"
+    "deCarlos:1993yy"
+    "lhacc"
+    "scaledep"
+    "mandv"
+    "bottomMass"
+    "bench"
+    "bench2"
+    "sdecay"
+    "pythia"
+    "micromegas"
+    "Randall:1998uk"
+    "gmsb"
+    "lhacc2")))
 
