@@ -2237,7 +2237,7 @@ We would like to thank
 A.~Djouadi, S.~Kraml and W. Porod 
 for help with detailed comparisons~\cite{comparison} with 
 {\tt SUSPECT}, {\tt ISAJET} and {\tt SPHENO},
-S.~Akula, P.~Athron, M.~Baak, M.~Badziak, 
+S.~Akula, P.~Athron, M.~Baak, M.~Badziak, E.~Bagnaschi,
 G.~B\'elanger, F.~Borzumati, F.~Boudjema, F.~Brummer, A.~Buckley, M.~Catalan,
 A.~Casas,  T.~Cridge,
 M.~Eads, H.~Eberl, J.~Evans, R.~Franceschini,
