@@ -3,5 +3,6 @@ to M Dolan
 <li>06/07/16: Patch for numerical stability of B1 function. Thanks to A
 Voigt. 
 <li>06/07/16: Approximate 2-loop QCD corrections to top mass included when the full ones are not compiled to provide backwards compatibility with 3.7.0 or earlier. This was accidentally *switched off* in 3.7.1. It can make a huge difference to the location of the focus point or higgsino LSP region. 
-
+<li>23/08/16: Error fixed in trilinear leptonic couplings in extendedSugraBCs
+in mssmUtils.cpp. Thanks to E Bagnaschi
 
